istio/002-canary-deployment/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: echo-dr
spec:
  host: echo-backend-service
  subsets: 
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
