istio/002-canary-deployment/echo-backend-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echo-backend-vs
spec:
  hosts:
  - "echo-backend-service"
  http:
  - match:
    - uri:
        prefix: /echo
    route:
    - destination:
        port:
          number: 8080
        host: echo-backend-service
        subset: v1
      weight: 75
    - destination:
        port:
          number: 8080
        host: echo-backend-service
        subset: v2
      weight: 25
